# XOS

./: .dockerignore  .gitignore  README.md  progress.md
.github/workflows/: build.yml  lint.yml
apps/app-store/: Cargo.toml
apps/app-store/src/: app.rs  main.rs  window.rs
apps/archive-tool/: Cargo.toml
apps/archive-tool/src/: app.rs  archive.rs  error.rs  main.rs  window.rs
apps/automation-builder/: Cargo.toml
apps/automation-builder/src/: app.rs  main.rs  window.rs
apps/control-center/: Cargo.toml
apps/control-center/src/: app.rs  error.rs  main.rs  window.rs
apps/control-center/src/pages/: appearance.rs  battery.rs  display.rs  heat.rs  mod.rs  network.rs  permissions.rs  resources.rs  sound.rs  updates.rs
apps/file-manager/: Cargo.toml  test.sh
apps/file-manager/src/: app.rs  breadcrumb.rs  error.rs  listing.rs  main.rs  operations.rs  preview.rs  search.rs  search_bar.rs  sidebar.rs  window.rs
apps/notes/: Cargo.toml
apps/notes/src/: app.rs  error.rs  main.rs  storage.rs  window.rs
apps/notification-center/: Cargo.toml
apps/notification-center/src/: app.rs  main.rs  notification.rs  notification_row.rs  window.rs
apps/quick-settings/: Cargo.toml
apps/quick-settings/src/: app.rs  main.rs  power.rs  sliders.rs  toggles.rs  window.rs
apps/screenshot/: Cargo.toml
apps/screenshot/src/: app.rs  capture.rs  error.rs  main.rs  window.rs
apps/system-monitor/: Cargo.toml
apps/system-monitor/src/: app.rs  main.rs  overview.rs  processes.rs  sysdata.rs  window.rs
base/: packages.x86_64  pacman.conf  profiledef.sh
base/airootfs/etc/greetd/: config.toml
base/airootfs/etc/systemd/: zram-generator.conf
base/airootfs/root/: .automated_script.sh
daemons/automation-engine/: Cargo.toml
daemons/automation-engine/src/: main.rs
daemons/permission-daemon/: Cargo.toml
daemons/permission-daemon/src/: main.rs
daemons/resource-daemon/: Cargo.toml
daemons/resource-daemon/src/: main.rs
daemons/update-manager/: Cargo.toml
daemons/update-manager/src/: main.rs
desktop/foot/: foot.ini
desktop/hypr/: hyprland.conf  hyprlock.conf
desktop/mako/: config
desktop/regreet/: config.toml
desktop/rofi/: config.rasi  xos.rasi
desktop/waybar/: config  style.css
docs/: ARCHITECTURE.md  BUILD.md  TESTING.md
hardware/battery/: Makefile  main.cpp  xos-battery-daemon
hardware/fan-control/: Makefile  main.cpp  xos-fan-control
hardware/thermal/: Makefile  main.cpp  xos-thermal-daemon
themes/xos/: colors.toml
(+2 files in other folders)
