[package]
name = "xos-archive-tool"
version = "0.1.0"
edition = "2021"
description = "XOS Archive Tool"
license = "MIT"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
glib = "0.20"
zip = "2.1.3"
tar = "0.4.40"
flate2 = "1.0.30"

[profile.release]
lto = true
codegen-units = 1
