[package]
name = "xos-system-monitor"
version = "0.1.0"
edition = "2021"
description = "XOS System Monitor"
license = "MIT"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_14"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
glib = "0.20"
sysinfo = "0.30"

[profile.release]
lto = true
codegen-units = 1
